--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,20 @@
 {%extends 'layout.html'%} {%block title%} Inicio {%endblock%} {%block
 content%}
 
+<div class="bg-opacity-5 bg-white p-4 rounded-lg shadow-md ml-4">
+  <div class="flex items-center">
+    <i class="bx bx-money-withdraw text-2xl mr-2" style="color: white"></i>
+    {% for ganancia in gananciasTotales %}
+      {% if ganancia.GananciaTotal %}
+        <h1 class="text-2xl font-bold mb-4 text-white ml-4 mt-3">
+          Ganancias totales {{ ganancia.GananciaTotal }}$
+        </h1>
+      {% endif %}
+    {% endfor %}
+  </div>
+</div>
+
+
 <div class="flex">
   <div class="w-3/4 p-4">
     <!-- Contenido de la izquierda (tarjetas) -->
