--- a/templates/load.html
+++ b/templates/load.html
@@ -18,7 +18,7 @@
           background-color: white;
         }
         100% {
-          background-color: #020617; /* Color de fondo bg-slate-900 */
+          background-color: #020617; 
         }
       }
     </style>
@@ -38,10 +38,10 @@
     <script>
       setTimeout(function () {
         window.location.href = "/";
-      }, 6000); // Redirecciona después de 6 segundos
+      }, 6000); 
 
       setTimeout(function () {
-        // Después de 2 segundos adicionales (2000 milisegundos), no hace nada
+        
       }, 2000);
     </script>
   </body>
