--- a/templates/venderProducto.html
+++ b/templates/venderProducto.html
@@ -7,7 +7,7 @@ Vender Producto
 {% block content %}
 <h1 class="text-2xl font-bold mb-4 text-white">Vender Producto</h1>
 
-<form action="/vender-producto" class="bg-white p-6 rounded shadow-sm" method="POST">
+<form data-redirect="/" id="formulario" action="/vender-producto" class="bg-white p-6 rounded shadow-sm" method="POST">
     <label class="block text-gray-700 font-medium mb-2" for="ProductoID">Producto:</label>
     <select class="w-full py-2 px-3 rounded border border-gray-300 focus:outline-none focus:border-blue-500" name="ProductoID" required>
         {% for producto in inventario %}
@@ -20,5 +20,6 @@ Vender Producto
 
     <input type="submit" value="Vender Producto" class="bg-slate-500 hover:bg-slate-400 text-white font-bold py-2 px-4 border-b-4 border-slate-700 hover:border-slate-500 rounded mt-10">
 </form>
+
 
 {% endblock %}
