--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,18 @@
 {%extends 'layout.html'%} {%block title%} Inicio {%endblock%} {%block
 content%}
+<style>
+  @media screen and (max-width: 750px) {
+    body {
+      overflow:visible;
+    }
+  }
 
+  @media screen and (max-width: 580px) {
+    body {
+      overflow:visible;
+    }
+  }
+</style>
 <div class="p-4 rounded-lg shadow-md datos">
   <div class="flex items-center">
 
